--- a/SocialJournal/SocialJournal/Base.lproj/Main.storyboard
+++ b/SocialJournal/SocialJournal/Base.lproj/Main.storyboard
@@ -368,7 +368,7 @@
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KPY-jW-bgm">
                                 <rect key="frame" x="16" y="127" width="568" height="275"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <mutableString key="text">The last few months, I have been working on a project to treat text on computers as more than just an electronic analogue of paper.
+                                <string key="text">The last few months, I have been working on a project to treat text on computers as more than just an electronic analogue of paper.
 
 The idea is to make text structured and interactive. Text is not just a blob of characters thrown on the paper/screen for reading, but one of many ways communicate. Text is a medium for the conveyance of ideas and these ideas do not stand alone. These thoughts are referenced continually within a workflow.
 
@@ -416,7 +416,7 @@ current: On a screen, annotations are rudimentary and slow to use (this may be b
 desired: Even if annotations are possible on any single device, one can not use these across different platforms, nor share the annotations easily. Annotations need to portable, searchable, and support cross-references.
 Other related topics
 
-document layout — There is some information that is relevant for navigation that is implicit in the document's structure and dealing with documents that are not "born-digital" will require the automatic extraction of this structure. This can be quite difficult even for PDFs that are born-digital.</mutableString>
+document layout — There is some information that is relevant for navigation that is implicit in the document's structure and dealing with documents that are not "born-digital" will require the automatic extraction of this structure. This can be quite difficult even for PDFs that are born-digital.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
